--- a/demo/appmanifest.json
+++ b/demo/appmanifest.json
@@ -2,8 +2,8 @@
 	"name": "GGJ",
 	"short_name": "GGJ",
 	"start_url": "index.html",
-	"display": "fullscreen",
-	"orientation": "any",
+	"display": "standalone",
+	"orientation": "landscape",
 	"icons": [{
 		"src": "icon-16.png",
 		"sizes": "16x16",
