--- a/demo/appmanifest.json
+++ b/demo/appmanifest.json
@@ -2,7 +2,7 @@
 	"name": "GGJ",
 	"short_name": "GGJ",
 	"start_url": "index.html",
-	"display": "standalone",
+	"display": "fullscreen",
 	"orientation": "landscape",
 	"icons": [{
 		"src": "icon-16.png",
